--- a/MoliProperties.ui
+++ b/MoliProperties.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>磨粒属性</string>
   </property>
   <widget class="QWidget" name="layoutWidget_2">
    <property name="geometry">
